--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: flask-crop-app
     runtime: python
-    buildCommand: ""
-    startCommand: gunicorn app:flask_app
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn app:flask_app --bind 0.0.0.0:$PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.9
